# CANlock

./: .app_settings.json  .db  .gitignore  CSV_TRANSFORM_README.md  README.md  docker-compose.yml  pyproject.toml  test_transform.py
attacks/: AttackDDOS.py
doc/: attack_synthesis.md  git.md  litterature.md  rapport_canlock.tex  uv.md  vscode.md
notebooks/: can_data_analysis.ipynb  cnn_lstm_model.ipynb  eda_heavy_truck.ipynb  influxdb_wip.ipynb  rnn_vae_model.ipynb  spn_analysis_full.ipynb  train_ids_models.ipynb
notebooks/checkpoints/: best_model_cnnlstm.json  best_model_lstmcnn.json  scaler.pkl
scripts/: attack_inspect.py  attack_synthesis.py  attack_visualize.py  generate_architecture_figures.py  generate_poster_figures.py
src/canlock/: __main__.py  cli.py  decoder.py
src/canlock/attacks/: Attack.py  AttackBase.py  MasqueradeAttack.py  ReplayAttack.py  SpoofingAttack.py  SuspensionAttack.py  __init__.py  attack_base.py  attack_dataset.py  attack_ddos.py  attack_generator.py  dos_generator.py  functools.py  fuzzing_generator.py  injection_generator.py  masquerade_attack.py  normal_traffic_generator.py  replay_attack.py  spn_dataset.py  spoofing_attack.py  spoofing_generator.py  suspension_attack.py
src/canlock/data/: can_data_module.py  csv_transform_data.py  download_heavy_duty_truck_data.py
src/canlock/db/: _settings.py  database.py  models.py
src/canlock/models/: __init__.py  anomaly_detector.py  base.py  cnn_lstm.py  cnn_lstm_autoencoder.py  lstm_cnn.py  rnn_vae.py
src/canlock/training/: __init__.py  dataset.py  metrics.py  train_models.py  trainer.py
src/dataset_export/: README.md  __main__.py
src/dataset_export/app/: settings.py
src/dataset_export/app/dataset_import/_base/: _log_file.py  _vehicle.py
src/dataset_export/app/dataset_import/_renault_dataset/: _log_file.py  _vehicle.py  log_importer.py
src/dataset_export/app/dataset_import/_shared/: _database.py  _vehicle_logger.py
src/dataset_export/app/logger/: local.py  logger.py
src/dataset_export/app/persistance/: database.py  models.py
src/rl_training/: __init__.py
src/test/: test_decoder.py
