[project]
name = "canlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
    "click>=8.3.0",
    "dask[complete]>=2025.9.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "tqdm>=4.67.1",
]

[project.scripts]
canlock = "canlock.cli:main"
download-heavy-truck-data = "canlock.cli:download_heavy_truck_data"
analyze-session = "canlock.cli:analyze_session"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/canlock"]
